# termie

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
.cargo/: audit.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
assets/: icon_128.rgba
packaging/linux/: install.sh  termie.desktop  uninstall.sh
plugins/: README.md
plugins/relay/: Cargo.toml  README.md  main.rs  plugin.json
plugins/tamagotchi/: Cargo.toml  README.md  main.rs  plugin.json
setup/: Cargo.toml
setup/src/: engine.rs
src/: a11y.rs  apc.rs  color.rs  defterm.rs  fxhash.rs  grid.rs  image.rs  input.rs  instance.rs  main.rs  microbench.rs  pty.rs  regex.rs  session.rs  term.rs  termview.rs  uiview.rs  update.rs  win.rs
src/plugin/: json.rs  manifest.rs  market.rs  mod.rs  proto.rs  sandbox.rs  sandbox_unix.rs
src/render/: atlas.rs  mod.rs  preview.rs  shader.wgsl
tests/golden/: alt_screen.txt  char_widths.txt  cursor_cup_el.txt  diff_bars.txt  erase_bce.txt  ich_dch.txt  insert_line.txt  kitty_modes.txt  osc_title_cwd.txt  reflow_grow.txt  reflow_shrink.txt  scroll_region.txt  sgr_styles.txt  soft_wrap.txt  tab_stops.txt  underline_variants.txt  wide_at_edge.txt
