[package]
name = "termie"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A GPU-rendered terminal multiplexer for Windows — a cockpit for AI TUIs"
repository = "https://github.com/lintowe/termie"

[dependencies]
accesskit = "0.24"
accesskit_winit = "0.33"
anyhow = "1.0.102"
bytemuck = { version = "1.25.0", features = ["derive"] }
cosmic-text = { version = "0.19.0", default-features = false, features = ["std", "swash"] }
log = "0.4.30"
pollster = "0.4.0"
portable-pty = "0.9.0"
vte = "0.15.0"
wgpu = "29.0.3"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_Graphics_Dwm", "Win32_System_Registry", "Win32_System_SystemInformation", "Win32_System_DataExchange", "Win32_System_Memory", "Win32_System_Ole", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse"] }
winit = "0.30.13"

[features]
# private cpu microbenchmark harness (`--microbench`); compiled out by default so
# the shipped binary carries no bench code. build: cargo run --release --features microbench
microbench = []

[build-dependencies]
embed-manifest = "1.5.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
