[package]
name = "termie"
version = "0.3.2"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A fast, GPU-rendered terminal multiplexer for Windows"
repository = "https://github.com/lintowe/termie"
homepage = "https://github.com/lintowe/termie"
readme = "README.md"
keywords = ["terminal", "multiplexer", "gpu", "wgpu", "windows"]
categories = ["command-line-utilities", "gui"]
rust-version = "1.88"

[dependencies]
accesskit = "0.24"
accesskit_winit = "0.33"
anyhow = "1.0.102"
bytemuck = { version = "1.25.0", features = ["derive"] }
cosmic-text = { version = "0.19.0", default-features = false, features = ["std", "swash"] }
log = "0.4.30"
png = "0.18"
pollster = "0.4.0"
portable-pty = "0.9.0"
vte = "0.15.0"
wgpu = "29.0.3"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_Graphics_Dwm", "Win32_Security", "Win32_Security_Authorization", "Win32_Security_Isolation", "Win32_System_Pipes", "Win32_System_Registry", "Win32_System_SystemInformation", "Win32_System_Com", "Win32_System_DataExchange", "Win32_System_Memory", "Win32_System_Ole", "Win32_System_Threading", "Win32_System_Variant", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse"] }
winit = "0.30.13"

[features]
# private cpu microbenchmark harness (`--microbench`); compiled out by default so
# the shipped binary carries no bench code. build: cargo run --release --features microbench
microbench = []

[build-dependencies]
embed-manifest = "1.5.0"
embed-resource = "2.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
