[package]
name = "tamagotchi"
version = "0.1.0"
edition = "2024"

# own workspace table so this is independent of termie's build: running
# `cargo check` in the termie dir never compiles this, and vice versa
[workspace]

[[bin]]
name = "tamagotchi"
path = "main.rs"

[profile.release]
opt-level = 3
strip = true
panic = "abort"
